# exotica_valkyrie_collision_checking_example

./: CMakeLists.txt  README.md  package.xml
resources/: val_collision_check_config.xml
scripts/: python_example
src/: cpp_example.cpp
