<?xml version="1.0"?>
<package>
  <name>exotica_valkyrie_collision_checking_example</name>
  <version>0.0.1</version>
  <description>The exotica_valkyrie_collision_checking_example package</description>

  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>exotica</build_depend>
  <build_depend>exotica_examples</build_depend>
  <build_depend>val_description</build_depend>
  <run_depend>exotica</run_depend>
  <run_depend>exotica_python</run_depend>
  <run_depend>exotica_examples</run_depend>
  <run_depend>val_description</run_depend>
</package>
